scripts/kube/ingress/ing-dashboard.yaml
---
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: dashboard-ingresd
  namespace: kubernetes-dashboard
spec:
  rules:
  - host: dashboard.mkube
    http:
      paths:
      - path: /
        backend:
          serviceName: kubernetes-dashboard
          servicePort: 80
