scripts/kube/ingress/ing-jenkins.yaml
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: workshop
spec:
  rules:
  - host: jenkins.mkube
    http:
      paths:
      - path: /
        backend:
          serviceName: hl-jenkins
          servicePort: 8080
